<resources>
    <string name="app_name">Olimpiadas</string>
    <string name="digite_o_nome_do_time_1">Digite o nome do time 1</string>
    <string name="time_1">Time 1</string>
    <string name="time_2">Time 2</string>
    <string name="digite_o_nome_do_time_2">Digite o nome do time 2</string>
    <string name="continuar">Continuar</string>
    <string name="esportes">Esportes</string>
    <string name="futebol">Futebol</string>
    <string name="basquete" />
</resources>
