<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_1"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/nomedotime1"
        android:hint="@string/digite_o_nome_do_time_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
    android:layout_marginTop="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/time_2"
    android:textSize="20sp"
        />

    <EditText
        android:id="@+id/nomedotime2"
        android:hint="@string/digite_o_nome_do_time_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/botaocontinuar"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:layout_gravity="center_horizontal"
        />




</LinearLayout>