<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".EsportesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esportes"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/futebol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futebol"

    <Button
        android:id="@+id/basquete"
        android:layout_alignEnd="@+id/futebol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basquete"


</RelativeLayout>